# aig_tasks

./: .gitignore  1_task1_eng_outlier_idnetification.ipynb  2.1_improvement_retrival.ipynb  2_task2_retrival.ipynb  README.md  pyproject.toml
raw_files/: 1282224_0.txt  1282224_1.txt  1282224_10.txt  1282224_11.txt  1282224_12.txt  1282224_13.txt  1282224_14.txt  1282224_15.txt  1282224_16.txt  1282224_17.txt  1282224_18.txt  1282224_19.txt  1282224_2.txt  1282224_20.txt  1282224_21.txt  1282224_22.txt  1282224_23.txt  1282224_24.txt  1282224_25.txt  1282224_26.txt  1282224_27.txt  1282224_28.txt  1282224_29.txt  1282224_3.txt  1282224_30.txt  1282224_31.txt  1282224_32.txt  1282224_4.txt  1282224_5.txt  1282224_6.txt  1282224_7.txt  1282224_8.txt  1282224_9.txt  1356949_0.txt  1356949_1.txt  1356949_10.txt  1356949_11.txt  1356949_12.txt  1356949_2.txt  1356949_3.txt  (+201 more)
results/: val_question_retrieval_pairs.json  val_question_retrieval_pairs_v2.json
