[project]
name = "aig-tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "datasets>=3.6.0",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "pyspark==3.4.4",
    "seaborn>=0.13.2",
    "sentence-transformers>=4.1.0",
]
